force-app/main/default/objects/Enrollment__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <inlineHelpText>A, B, C</inlineHelpText>
    <label>Class</label>
    <length>10</length>
    <type>Text</type>
</CustomField>