force-app/main/default/objects/Enrollment__c/fields/Fourth_Kid_Discount__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Kid_Discount__c</fullName>
    <formula>Program__r.Fourth_Kid_Discound__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fourth Kid Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>