force-app/main/default/objects/Enrollment__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <length>15</length>
    <type>Text</type>
</CustomField>