force-app/main/default/objects/Enrollment__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <formula>Student__r.Parent_Name__r.Name</formula>
    <label>Parent</label>
    <type>Text</type>
</CustomField>