force-app/main/default/objects/Enrollment__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Club Program for this enrollment.</inlineHelpText>
    <label>Program</label>
    <referenceTo>Club_Program__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>