force-app/main/default/objects/Enrollment__c/fields/Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_End_Date__c</fullName>
    <formula>Program__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program End Date</label>
    <type>Date</type>
</CustomField>