force-app/main/default/objects/Enrollment__c/fields/Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee__c</fullName>
    <inlineHelpText>Program Fee determined in the Club Program</inlineHelpText>
    <label>Program Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>