force-app/main/default/objects/Enrollment__c/fields/Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Start_Date__c</fullName>
    <formula>Program__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Start Date</label>
    <type>Date</type>
</CustomField>