force-app/main/default/objects/Enrollment__c/fields/Program_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Status__c</fullName>
    <label>Program Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Upcoming</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>