force-app/main/default/objects/Enrollment__c/fields/Third_Kid_Discount__c.field-meta.xml
<CustomField>
    <fullName>Third_Kid_Discount__c</fullName>
    <formula>Program__r.Third_Kid_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Third Kid Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>