force-app/main/default/objects/Enrollment__c/listViews/High_Schoolers.listView-meta.xml
<ListView>
    <fullName>High_Schoolers</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Grade__c</field>
        <operation>contains</operation>
        <value>High</value>
    </filters>
    <filters>
        <field>Program__c</field>
        <operation>contains</operation>
        <value>Volley</value>
    </filters>
    <label>High Schoolers</label>
</ListView>