force-app/main/default/objects/Enrollment__c/listViews/Sep_Dec_Program.listView-meta.xml
<ListView>
    <fullName>Sep_Dec_Program</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>contains</operation>
        <value>Sep-Dec</value>
    </filters>
    <label>Sep-Dec Program</label>
</ListView>