force-app/main/default/objects/Enrollment__c/listViews/X23_Volleyball.listView-meta.xml
<ListView>
    <fullName>X23_Volleyball</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Program__c</field>
        <operation>contains</operation>
        <value>Sunday</value>
    </filters>
    <label>23 Volleyball</label>
</ListView>